fix footer spacing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,7 +109,8 @@ nav {
 }
 
 footer {
-    margin: 40px 0px;
+    margin-top: 100px;
+    margin-bottom: 40px;
     width: 100%;
 }
         
